--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.8'
 services:
 
   mysql:
+    container_name: mysql
     image: fluxsync/mysql
     restart: always
     ports:
@@ -15,6 +16,7 @@ services:
       - fluxsync-networks
 
   jwt:
+    container_name: jwt
     image: fluxsync/auth-jwt
     restart: always
     ports:
@@ -23,6 +25,7 @@ services:
       - fluxsync-networks
 
   totp:
+    container_name: totp
     image: fluxsync/auth-totp
     restart: always
     ports:
@@ -31,6 +34,7 @@ services:
       - fluxsync-networks
 
   backend:
+    container_name: backend
     image: fluxsync/backend
     restart: always
     ports:
