--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "element-plus": "^2.11.2",
+    "js-cookie": "^3.0.5",
     "ogl": "^1.0.11",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
