--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "element-plus": "^2.11.2",
+    "gsap": "^3.13.0",
     "js-cookie": "^3.0.5",
     "ogl": "^1.0.11",
     "vue": "^3.5.18",
