--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "element-plus": "^2.11.2",
     "gsap": "^3.13.0",
     "js-cookie": "^3.0.5",
+    "naive-ui": "^2.43.1",
     "ogl": "^1.0.11",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
