feat: 完成JWT鉴权中间件
- 实现JWT鉴权逻辑，支持用户身份验证
- 封装中间件，统一处理Token校验与异常情况
- 优化代码结构，便于后续扩展权限控制

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
     restart: always
     environment:
       TZ: "Asia/Shanghai"
+      PORT: "1001"
     networks:
       - fluxsync-networks
 
@@ -38,6 +39,7 @@ services:
     restart: always
     environment:
       TZ: "Asia/Shanghai"
+      PORT: "1002"
     networks:
       - fluxsync-networks
 
