--- a/auth/jwt/package.json
+++ b/auth/jwt/package.json
@@ -11,9 +11,7 @@
   "description": "",
   "type": "module",
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.2",
     "express": "^5.1.0",
-    "nodemon": "^3.1.10"
+    "jsonwebtoken": "^9.0.2"
   }
 }
