feat: 完善Nginx服务与JWT中间件接口
- 完善Nginx服务的Dockerfile配置，提升构建与部署效率
- 优化Nginx配置，提高服务稳定性与可维护性
- 完善JWT中间件服务接口，增强认证功能的健壮性

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -3,6 +3,14 @@ FROM openresty/openresty:alpine
 COPY nginx.conf /usr/local/openresty/nginx/conf/nginx.conf
 COPY lua/ /usr/local/openresty/nginx/conf/lua/
 
+RUN apk add --no-cache git ca-certificates && update-ca-certificates && \
+    git clone https://github.com/ledgetech/lua-resty-http.git /tmp/lua-resty-http && \
+    cp -r /tmp/lua-resty-http/lib/resty/* /usr/local/openresty/lualib/resty/ && \
+    rm -rf /tmp/lua-resty-http
+
+RUN apk add --no-cache git lua5.1 lua5.1-dev luarocks5.1 build-base openssl-dev && \
+    luarocks-5.1 install lua-resty-openssl
+
 EXPOSE 1007
 
-CMD ["nginx", "-g", "daemon off;", "-c", "/usr/local/openresty/nginx/conf/nginx.conf"]
+CMD ["/usr/local/openresty/bin/openresty", "-g", "daemon off;", "-c", "/usr/local/openresty/nginx/conf/nginx.conf"]
