--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,9 +1,9 @@
 #==================== 全局/主进程配置 ====================
 
-user nginx;                                   # 使用 nginx 用户运行worker进程
+user nobody;                                  # 使用 nginx 用户运行worker进程
 worker_processes auto;                        # 自动按 CPU 核心数设置 worker 数
 
-error_log /var/log/nginx/error.log warn;      # 错误日志路径与级别
+error_log  /dev/stderr warn;                  # 错误日志路径与级别
 pid       /var/run/nginx.pid;                 # pid 文件路径
 
 
@@ -16,7 +16,10 @@ events {
 #==================== HTTP 上下文 ====================
 
 http {
-    include        /etc/nginx/mime.types;     # 文件类型映射
+
+    lua_package_path "/usr/local/openresty/nginx/conf/lua/?.lua;;";
+
+    include        /usr/local/openresty/nginx/conf/mime.types;     # 文件类型映射
     default_type   application/octet-stream;  # 默认 MIME 类型
 
     #----------- 访问日志 -----------#
@@ -24,7 +27,7 @@ http {
                           '$status $body_bytes_sent "$http_referer" '
                           '"$http_user_agent" "$http_x_forwarded_for" '
                           'rid=$http_x_request_id rt=$request_time uct = $upstream_connect_time urt=$upstream_response_time';
-    access_log      /var/log/nginx/access.log   main;   # 使用 main 日志格式记录访问日志
+    access_log      /dev/stdout   main;   # 使用 main 日志格式记录访问日志
 
     #----------- 基础性能与超时 -----------#
     sendfile        on;                        # 启用零拷贝发送文件
@@ -96,7 +99,7 @@ http {
     
     server {
         
-        listen      1007;                              # 容器内监听 1006
+        listen      1007;                              # 容器内监听 1007
         listen      [::]:1007;                         # IPv6 监听
 
         server_name _;                                 # 匹配任意主机名
@@ -160,6 +163,7 @@ http {
 
         # ------------------------- 健康检查 -------------------------
         location = /health {
+            access_log off;
             default_type text/plain;                      # 指定响应类型
             return 200 'ok';                              # 直接返回 200/ok
         }
