feat(application): 添加基础路由支持
- 修改 application 文件以完善路由结构
- 完成 /health 健康检查路由
- 初始化 /user/login 与 /user/register 用户认证路由

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,7 @@ services:
     restart: always
     environment:
       TZ: "Asia/Shanghai"
+      PORT: "1003"
     networks:
       - fluxsync-networks
 
