feat(database): 新增数据库工具与连接支持
- 添加数据库底层连接工具
- 引入 JDBC 连接库以支持数据库操作
- 新增 UserDTO 映射，简化用户数据传输

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,6 +1,11 @@
 spring:
   application:
     name: Fluxsync
+  datasource:
+    url: "jdbc:mysql://localhost:3306?useSSL=false&characterEncoding=utf8"
+    username: "root"
+    password: "fluxsync"
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
 server:
   port: ${PORT:1003}
