--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,11 +1,14 @@
 spring:
   application:
     name: Fluxsync
-  datasource:
-    url: "jdbc:mysql://localhost:3306?useSSL=false&characterEncoding=utf8"
-    username: "root"
-    password: "fluxsync"
-    driver-class-name: com.mysql.cj.jdbc.Driver
 
 server:
   port: ${PORT:1003}
+
+app:
+  datasource:
+    fluxsync-user:
+      jdbc-url: "jdbc:mysql://localhost:3306/fluxsync_user?useSSL=false&characterEncoding=utf8"
+      username: "root"
+      password: "fluxsync"
+      driver-class-name: com.mysql.cj.jdbc.Driver
