feat(config): 新增 Spring Application 配置项
- 增加与 TOTP 及用户相关的配置项
- 提升配置灵活性与可扩展性

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -12,3 +12,7 @@ app:
       username: "root"
       password: "fluxsync"
       driver-class-name: com.mysql.cj.jdbc.Driver
+
+  services:
+    totp:
+      url: "http://localhost:1002"
