feat(auth): 优化用户登录接口，返回 JWT Token
- 修改用户登录接口，在成功登录后返回签发的 JWT token
- 实现 token 签发与校验机制
- 增强接口的安全性与用户体验

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -8,7 +8,7 @@ server:
 app:
   datasource:
     fluxsync-user:
-      jdbc-url: "jdbc:mysql://localhost:3306/fluxsync_user?useSSL=false&characterEncoding=utf8"
+      jdbc-url: "jdbc:mysql://localhost:3306/fluxsync_user?useSSL=false&allowPublicKeyRetrieval=true&characterEncoding=utf8&useSSL=false"
       username: "root"
       password: "fluxsync"
       driver-class-name: com.mysql.cj.jdbc.Driver
@@ -16,3 +16,6 @@ app:
   services:
     totp:
       url: "http://localhost:1002"
+    jwt:
+      url: "http://localhost:1001"
+      uri: "/issue"
